--- a/FUNDING.yml
+++ b/FUNDING.yml
@@ -1,2 +1,2 @@
 github: ['tangrufus']
-custom: ['https://typist.tech/donation/', 'https://www.paypal.me/iAmTangRufus/30usd']
+custom: ['https://typist.tech/donation/']
