--- a/.github/workflows/pint.yml
+++ b/.github/workflows/pint.yml
@@ -17,7 +17,7 @@ on:
 permissions: {}
 
 jobs:
-  auto-pint:
+  pint:
     uses: typisttech/.github/.github/workflows/create-auto-merged-pull-request-php.yml@v2
     permissions:
       contents: read
