--- a/release-drafter.yml
+++ b/release-drafter.yml
@@ -1,4 +1,4 @@
-name-template: 'v$RESOLVED_VERSION'
+name-template: '[DRAFT] v$RESOLVED_VERSION'
 tag-template: 'v$RESOLVED_VERSION'
 
 template: |
@@ -9,12 +9,83 @@ template: |
   **Full Changelog**: https://github.com/$OWNER/$REPOSITORY/compare/$PREVIOUS_TAG...v$RESOLVED_VERSION
 
 categories:
+  - title: ':sparkles: New Features & Enhancements'
+    labels:
+      - enhancement
+      - enhancements
+      - feature
+      - features
+      - improvement
+      - improvements
+
+  - title: ':boom: Breaking'
+    labels:
+      - breaking
+
+  - title: ':fire: Removed'
+    labels:
+      - remove
+      - removed
+  
+  - title: ':wastebasket: Deprecated'
+    labels:
+      - deprecate
+      - deprecated
+
+  - title: ':bug: Bug Fixes'
+    labels:
+      - bug
+      - bugs
+
   - title: '️:arrow_up: Dependencies'
     collapse-after: 3
     labels:
-      - dependencies
-  - title: ':robot: Automated Commits'
+      - dependencies # Default label used by Dependabot
+
+  - title: ':memo: Documentation'
+    labels:
+      - doc
+      - docs
+      - documentation
+      - readme
+
+  - title: ':white_check_mark: Tests'
+    labels:
+      - test
+      - tests
+
+  - title: ':wrench: Maintenance'
+    labels:
+      - chore
+      - config
+      - maintenance
+
+  - title: ':pencil2: Typos'
+    labels:
+      - typo
+      - typos
+
+  - title: ':robot: Automated'
     collapse-after: 3
     labels:
-      - tastendruck
       - github_actions
+      - tastendruck
+
+exclude-labels:
+  - reverted
+  - skip-release
+  - invalid
+
+version-resolver:
+  major:
+    labels:
+      - breaking
+      - major
+  minor:
+    labels:
+      - enhancement
+      - minor
+  patch:
+    labels:
+      - patch
+  default: patch
