--- a/.github/workflows/pint.yml
+++ b/.github/workflows/pint.yml
@@ -27,8 +27,5 @@ jobs:
       tools: pint:${{ inputs.pint-version }}
       composer-install: false
       branch: tastendruck/github_actions/pint/${{ github.ref_name }}
-      labels: |
-        tastendruck
-        github_actions
-        pint
+      labels: pint
     secrets: inherit
