--- a/.github/workflows/pint.yml
+++ b/.github/workflows/pint.yml
@@ -18,7 +18,7 @@ permissions: {}
 
 jobs:
   pint:
-    uses: typisttech/.github/.github/workflows/create-auto-merged-pull-request-php.yml@v2
+    uses: typisttech/.github/.github/workflows/create-auto-merged-pull-request-php.yml@default-labels
     permissions:
       contents: read
     with:
@@ -27,8 +27,5 @@ jobs:
       tools: pint:${{ inputs.pint-version }}
       composer-install: false
       branch: tastendruck/github_actions/pint/${{ github.ref_name }}
-      labels: |
-        tastendruck
-        github_actions
-        pint
+      labels: pint
     secrets: inherit
