--- a/.github/workflows/pint.yml
+++ b/.github/workflows/pint.yml
@@ -18,7 +18,7 @@ permissions: {}
 
 jobs:
   pint:
-    uses: typisttech/.github/.github/workflows/create-auto-merged-pull-request-php.yml@default-labels
+    uses: typisttech/.github/.github/workflows/create-auto-merged-pull-request-php.yml@v2
     permissions:
       contents: read
     with:
