--- a/.github/workflows/composer-audit.yml
+++ b/.github/workflows/composer-audit.yml
@@ -8,6 +8,9 @@ permissions: {}
 jobs:
   composer-audit:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        dependency-versions: [lowest, highest]
     permissions:
       contents: read
     steps:
@@ -26,7 +29,7 @@ jobs:
 
       - uses: ramsey/composer-install@v3
         with:
-          dependency-versions: lowest
+          dependency-versions: ${{ matrix.dependency-versions }}
           composer-options: --no-install --no-audit --no-autoloader --ignore-platform-reqs
 
       - run: composer audit --locked
