Rename job: `update-release-draft` -> `release-drafter`

--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -6,7 +6,7 @@ on:
 permissions: {}
 
 jobs:
-  update-release-draft:
+  release-drafter:
     runs-on: ubuntu-latest
     permissions:
       contents: write
