Dependabot Auto-merge: Default `strategy` to `squash`

--- a/.github/workflows/dependabot-auto-merge.yml
+++ b/.github/workflows/dependabot-auto-merge.yml
@@ -19,7 +19,7 @@ on:
         type: boolean
       strategy:
         description: The strategy to use for updating the pull request. Must be one of 'merge', 'squash', or 'rebase'.
-        default: merge
+        default: squash
         type: string
 
 permissions: {}
