`lint-go.yml`: Add `golangci-lint`

--- a/.github/workflows/lint-go.yml
+++ b/.github/workflows/lint-go.yml
@@ -8,6 +8,17 @@ on:
         default: go.mod
         type: string
 
+      # golangci-lint
+      golangci-lint:
+        description: Whether to run golangci-lint
+        default: true
+        type: boolean
+
+      golangci-lint-version:
+        description: Whether to run golangci-lint
+        default: latest
+        type: string
+
 permissions:
   contents: read
 
@@ -18,9 +29,21 @@ jobs:
       - uses: actions/checkout@v5
 
       - uses: actions/setup-go@v6
-        id: setup-go
         with:
           go-version-file: ${{ inputs.go-version-file }}
 
       - run: go mod tidy -diff
         shell: bash
+
+  golangci-lint:
+    if: ${{ inputs.golangci-lint }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v5
+      - uses: actions/setup-go@v6
+        with:
+          go-version: stable
+
+      - uses: golangci/golangci-lint-action@v8
+        with:
+          version: ${{ inputs.golangci-lint-version }}
