--- a/.github/workflows/lint-action.yml
+++ b/.github/workflows/lint-action.yml
@@ -17,6 +17,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
+        with:
+          sparse-checkout: .github
 
       - name: Check workflow files
         uses: docker://rhysd/actionlint:latest
